--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -1,6 +1,5 @@
-<p id="notice"><%= notice %></p>
 
-<div class="toppage">
+<div id="calendars_index_body">
   <h1 class="top">行事予定</h1>
   <div class="col-md-8">
     <%# メモ：eventsはコントローラで設定したインスタンス変数を置くことでデータを引っ張ってきている  %>
