--- a/app/views/change_posts/new.html.erb
+++ b/app/views/change_posts/new.html.erb
@@ -1,8 +1,9 @@
 
 
-<h1>変更システム</h1>
-<p id="change_title">各種変更内容について、入力ください</p>
+<div id="change_posts_new_body">
+  <h1>変更システム</h1>
+  <p id="change_title">各種変更内容について、入力ください</p>
 
-<%= render 'form', change_post: @change_post %>
+  <%= render 'form', change_post: @change_post %>
 
-<%= link_to 'Back', change_posts_path %>
+</div>
