--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,12 +2,11 @@
 <html>
   <head>
     <title>こはた保育園システム</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1"> <%# メディアサイズ %>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0> <%# メディアサイズ %>
     <%= csrf_meta_tags %> <%# 外部からの不正アクセスに対処する為のhtmlタグ %>
     <%= csp_meta_tag %>  <%# 外部からの不正アクセスに対処する為のhtmlタグ %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    
   </head>
 
   <body>
