--- a/app/views/parent_forms/index.html.erb
+++ b/app/views/parent_forms/index.html.erb
@@ -1,33 +1,30 @@
-<p id="notice"><%= notice %></p>
 
-<h1>Parent Forms</h1>
+<div id="parent_form_index_body">
+  <div class="parent_links">
+  <%= link_to "保護者システム", new_parent_form_path ,id: :parent_tops_system %>
+  </div>
+  <h1>お問い合わせ一覧</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Children name</th>
-      <th>Parent name</th>
-      <th>Content name</th>
-      <th>Contents</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @parent_forms.each do |parent_form| %>
+  <table>
+    <thead>
       <tr>
-        <td><%= parent_form.children_name %></td>
-        <td><%= parent_form.parent_name %></td>
-        <td><%= parent_form.content_name %></td>
-        <td><%= parent_form.contents %></td>
-        <td><%= link_to 'Show', parent_form %></td>
-        <td><%= link_to 'Edit', edit_parent_form_path(parent_form) %></td>
-        <td><%= link_to 'Destroy', parent_form, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>保護者名</th>
+        <th>子ども名前</th>
+        <th>項目</th>
+        <th>内容</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @parent_forms.each do |parent_form| %>
+        <tr>
+          <td><%= parent_form.parent_name %></td>
+          <td><%= parent_form.children_name %></td>
+          <td><%= parent_form.content_name %></td>
+          <td><%= link_to '詳細', parent_form %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Parent Form', new_parent_form_path %>
+</div>
