--- a/app/views/stampings/_form.html.erb
+++ b/app/views/stampings/_form.html.erb
@@ -20,8 +20,8 @@
     </div>
   </div>
   <div id="stamping_children_names">
-    <%= form.label :children_name, "お子様の名前:", id: :stamping_children_name %>
-    <%= form.text_field :children_name %>
+    <%= form.label :stamping_children_name, "お子様の名前:", id: :stamping_children_name %>
+    <%= form.text_field :stamping_children_name %>
   </div>
   <div id="stamping_times">
     <%= form.radio_button :stamping_times, "登園" %>
