--- a/app/views/administrators/index.html.erb
+++ b/app/views/administrators/index.html.erb
@@ -1,5 +1,4 @@
 <body id="administrator_body">
-  <p id="notice"><%= notice %></p>
   <div class="parent_links">
     <%= link_to "保護者システム", parent_tops_path ,id: :parent_tops_system %>
   </div>
@@ -8,9 +7,18 @@
     <h1 class="top_h1">こはた保育園 管理者画面</h1>
     <%= image_tag "administrator_image.png", id: :administrator_image %>
   </div>
+  <%# 新着の余白 %>
   <div id="new_arrival">
     <p id="p_arrival">新着</p>
     <div id="arrival">
+      <div class="arrival_link">
+        <p class="arrival_new">NEW</p>
+        <p class="arrival_link_id"><%= link_to "連絡ノートが更新されました", daily_record_path(1) %></p>
+      </div>
+      <div class="arrival_link">
+        <p class="arrival_new">NEW</p>
+        <p class="arrival_link_id"><%= link_to "取り組みが更新されました", incorporates_path %></p>
+      </div>
     </div>
   </div>
   <div id="administrator_lists">
@@ -42,6 +50,4 @@
       </li>
     </ul>
   </div>
-
-  <%= link_to 'トップ', administrators_path %>
 </body>
