--- a/app/views/daily_records/_form.html.erb
+++ b/app/views/daily_records/_form.html.erb
@@ -1,3 +1,4 @@
+
 <%= form_with(model: daily_record) do |form| %>
   <% if daily_record.errors.any? %>
     <div id="error_explanation">
@@ -12,168 +13,172 @@
   <% end %>
   </div>
   
-  <div class="overall">
-    <p>本日のお子様について、連絡致します</p>
-    <div id="all_radio">
-      <div id="condition">
-        <h3 class="parent_title_h3">体調</h3>
-        <div id="body_temperature">
-          <%= form.label :temperature, "午後の体温:" %>
-          <%= form.select :temperature, [["36.0~36.5","36.0~36.5"],["36.6~37.0","36.6~37.0"],["37.1~37.5","37.1~37.5"]] %>
+  <div id="daily_record_form_body">
+    <div id="daily_note_date">
+      <%= form.label :parent_note_date, "入力日:" %>
+      <%= raw sprintf(form.date_select(:parent_note_date,use_month_numbers:true,date_separator: "%s"), "年","月")+"日" %>
+    </div>
+    <div class="overall">
+      <div id="all_radio">
+        <div id="condition">
+          <h3 class="daily_title_h3">体調</h3>
+          <div id="daily_body_temperature">
+            <%= form.label :note_temperature, "午後の体温:" %>
+            <%= form.select :note_temperature, [["36.0~36.5","36.0~36.5"],["36.6~37.0","36.6~37.0"],["37.1~37.5","37.1~37.5"]] %>
+          </div>
+          <%# 体調 %>
+          <div id="condition_button">
+            <div class="daily_three_button" id="condition_style">
+              <p class="button_title">体調:</p>
+              <%= form.radio_button :note_condition, :good %>
+              <%= form.label :note_condition, "良い" , {value: :good} %>
+              <%= form.radio_button :note_condition, :somewhat_bad %>
+              <%= form.label :note_condition, "やや悪い", {value: :somewhat_bad}  %>
+              <%= form.radio_button :note_condition, :bad %>
+              <%= form.label :note_condition, "悪い", {value: :bad}  %>
+          </div>
         </div>
-        <%# 体調 %>
-        <div id="condition_button">
-          <div class="three_button" id="condition_style">
-            <p class="button_title">体調:</p>
-            <%= form.radio_button :condition, :good %>
-            <%= form.label :condition_good, "良い" %>
-            <%= form.radio_button :condition, :somewhat_bad %>
-            <%= form.label :condition_somewhat_bad, "やや悪い" %>
-            <%= form.radio_button :condition, :bad %>
-            <%= form.label :condition_bad, "悪い" %>
-        </div>
-      </div>
 
-      <%# やや悪い・悪いボタンの場合（スライドダウン） %>
-      <div id="hidden_detail">
-        <%#= 複数選択クリック  %>
-        <div id="details">
-          <p class="details_title">詳細の選択・記入をお願いします</p>
-          <p>（複数選択可能）</p>
-          <div id="detail">
-            <div class="detail_box">
-              <%= form.check_box :snot, {}, "true", "false" %>
-              <%= form.label :snot, "鼻水" %>
-            </div>
-            <div class="detail_box">
-              <%= form.check_box :cough, {}, "true", "false" %>
-              <%= form.label :cough, "咳" %>
-            </div>
-            <div class="detail_box">
-              <%= form.check_box :slight_fever, {}, "true", "false" %>
-              <%= form.label :slight_fever, "微熱" %>
-            </div>
-            <div class="detail_box">
-              <%= form.check_box :heat, {}, "true", "false" %>
-              <%= form.label :heat, "発熱" %>
-            </div>
-            <div class="detail_box">
-              <%= form.check_box :diarrhea, {}, "true", "false" %>
-              <%= form.label :diarrhea, "下痢" %>
-            </div>
-            <div class="detail_box">
-              <%= form.check_box :vomiting, {}, "true", "false" %>
-              <%= form.label :vomiting, "嘔吐" %>
-            </div>
-            <div class="detail_box">
-              <%= form.check_box :anorexia, {}, "true", "false" %>
-              <%= form.label :anorexia, "食欲不振" %>
-            </div>
-            <div class="detail_box">
-              <%= form.check_box :cold, {}, "true", "false" %>
-              <%= form.label :cold, "風邪" %>
-            </div>
-            <div>
-              <p class="details_title">追記・その他</p>
-              <p class="condition_p">※上記の選択内容に追記がある場合は、詳細を入力ください。</p>
-              <p class="condition_p">※その他、体調面で連絡したいことがあれば入力ください。</p>
-              <%= form.text_area :condition %>  
+        <%# やや悪い・悪いボタンの場合（スライドダウン） %>
+        <div id="daily_hidden_detail">
+          <%#= 複数選択クリック  %>
+          <div id="daily_details">
+            <p class="daily_details_title">詳細の選択・記入をお願いします</p>
+            <p>（複数選択可能）</p>
+            <div id="daily_detail">
+              <div class="daily_detail_box">
+                <%= form.check_box :note_snot, {}, "true", "false" %>
+                <%= form.label :note_snot, "鼻水" %>
+              </div>
+              <div class="daily_detail_box">
+                <%= form.check_box :note_cough, {}, "true", "false" %>
+                <%= form.label :counote_coughgh, "咳" %>
+              </div>
+              <div class="daily_detail_box">
+                <%= form.check_box :note_slight_fever, {}, "true", "false" %>
+                <%= form.label :note_slight_fever, "微熱" %>
+              </div>
+              <div class="daily_detail_box">
+                <%= form.check_box :note_heat, {}, "true", "false" %>
+                <%= form.label :note_heat, "発熱" %>
+              </div>
+              <div class="daily_detail_box">
+                <%= form.check_box :note_diarrhea, {}, "true", "false" %>
+                <%= form.label :note_diarrhea, "下痢" %>
+              </div>
+              <div class="daily_detail_box">
+                <%= form.check_box :note_vomiting, {}, "true", "false" %>
+                <%= form.label :note_vomiting, "嘔吐" %>
+              </div>
+              <div class="daily_detail_box">
+                <%= form.check_box :note_anorexia, {}, "true", "false" %>
+                <%= form.label :note_anorexia, "食欲不振" %>
+              </div>
+              <div class="daily_detail_box">
+                <%= form.check_box :note_cold, {}, "true", "false" %>
+                <%= form.label :note_cold, "風邪" %>
+              </div>
+              <div>
+                <p class="daily_details_title">追記・その他</p>
+                <p class="condition_p">※上記の選択内容に追記がある場合は、詳細を入力ください。</p>
+                <p class="condition_p">※その他、体調面で連絡したいことがあれば入力ください。</p>
+                <%= form.text_area :note_condition_text %>  
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <%# 排便 %>
-      <div class="twe_button" id="defecation">
-        <p class="button_title">排便:</p>
-        <%= form.radio_button :defecation, :yes %>
-        <%= form.label :defecation, "有り", {value: :yes} %>
-        <%= form.radio_button :defecation, :none %>
-        <%= form.label :defecation, "無し", {value: :none} %>
-      </div>
-      <%# 排便有りの場合（スライドダウン） %>
-      <div id="stool_hidden">
-        <div id="stool_yes">
-          <%= form.label :stool_yes, "便の様子" %>
-          <%= form.select :stool_yes, [["普通便","普通便"],["やや軟便","やや軟便"],["軟便","軟便"],["下痢","下痢"],["水様便","水様便"]] %>
+        <%# 排便 %>
+        <div class="daily_twe_button" id="defecation">
+          <p class="button_title">排便:</p>
+          <%= form.radio_button :note_defecation, :yes %>
+          <%= form.label :note_defecation, "有り", {value: :yes} %>
+          <%= form.radio_button :note_defecation, :none %>
+          <%= form.label :note_defecation, "無し", {value: :none} %>
         </div>
-        <div id="stool_number">
-          <%= form.label :stool_number, "回数" %>
-          <%= form.select :stool_number, [["1回","1回"],["2回","2回"],["3回","3回"]] %>
+        <%# 排便有りの場合（スライドダウン） %>
+        <div id="daily_stool_hidden">
+          <div id="stool_yes">
+            <%= form.label :note_stool_yes, "便の様子" %>
+            <%= form.select :note_stool_yes, [["普通便","普通便"],["やや軟便","やや軟便"],["軟便","軟便"],["下痢","下痢"],["水様便","水様便"]] %>
+          </div>
+          <div id="stool_number">
+            <%= form.label :note_stool_number, "回数" %>
+            <%= form.select :note_stool_number, [["1回","1回"],["2回","2回"],["3回","3回"]] %>
+          </div>
         </div>
-      </div>
-      <%# 怪我 %>
-      <div class="twe_button" id="injury">
-        <p class="button_title">怪我:</p>
-        <%= form.radio_button :injury, :yes %>
-        <%= form.label :injury, "有り", {value: :yes} %>
-        <%= form.radio_button :injury, :none %>
-        <%= form.label :injury, "無し", {value: :none} %>
-      </div>
-      <%# 怪我有りの場合（スライドダウン) %>
-      <div id="injury_hidden">
-        <%= form.label :injury_hidden, "怪我の詳細を記入ください" %>
-        <%= form.text_area :injury_hidden %>
-      </div>
+        <%# 怪我 %>
+        <div class="daily_twe_button" id="injury">
+          <p class="button_title">怪我:</p>
+          <%= form.radio_button :note_injury, :yes %>
+          <%= form.label :note_injury, "有り", {value: :yes} %>
+          <%= form.radio_button :note_injury, :none %>
+          <%= form.label :note_injury, "無し", {value: :none} %>
+        </div>
+        <%# 怪我有りの場合（スライドダウン) %>
+        <div id="daily_injury_hidden">
+          <%= form.label :note_injury_text, "怪我の詳細を記入ください" %>
+          <%= form.text_area :note_injury_text %>
+        </div>
 
-      <h3 class="parent_title_h3">食事</h3>
-      <div id="morning_snacks">
-        <p class="meal_p">朝おやつ</p>
-        <div class="twe_button" id="morning_snack">
-          <%= form.radio_button :morning_snack, :complete %>
-          <%= form.label :morning_snack, "完食", {value: :complete} %>
-          <%= form.radio_button :morning_snack, :remaining %>
-          <%= form.label :morning_snack, "残食", {value: :remaining} %>
+        <h3 class="daily_title_h3">食事</h3>
+        <div id="morning_snacks">
+          <p class="meal_p">朝おやつ:</p>
+          <div class="daily_twe_button" id="morning_snack">
+            <%= form.radio_button :note_morning_snack, :complete %>
+            <%= form.label :note_morning_snack, "完食", {value: :complete} %>
+            <%= form.radio_button :note_morning_snack, :remaining %>
+            <%= form.label :note_morning_snack, "残食", {value: :remaining} %>
+          </div>
+        </div>
+        <%# 残食ボタンをクリックすると、スライドダウン %>
+        <div id="morning_hidden">
+          <%= form.label :note_morning_remaining_contents, "残食量と内容" %>
+          <%= form.text_area :note_morning_remaining_contents %>
+        </div>
+        <div id="noons">
+          <p class="meal_p">昼食:</p>
+          <div class="daily_twe_button" id="noon">
+              <%= form.radio_button :note_noon, :complete %>
+              <%= form.label :note_noon, "完食", {value: :complete} %>
+              <%= form.radio_button :note_noon, :remaining %>
+              <%= form.label :note_noon, "残食", {value: :remaining} %>
+              <%# 残食ボタンをクリックすると、スライドダウン %>
+          </div>
+        </div>
+        <div id="noon_hidden">
+          <%= form.label :note_noon_remaining_contents, "残食量と内容" %>
+          <%= form.text_area :note_noon_remaining_contents %>
+        </div>
+        <div id="noon_snacks">
+          <p class="meal_p">午後おやつ:</p>
+          <div class="daily_twe_button" id="noon_snack">
+              <%= form.radio_button :note_noon_snack, :complete %>
+              <%= form.label :note_noon_snack, "完食", {value: :complete} %>
+              <%= form.radio_button :note_noon_snack, :remaining %>
+              <%= form.label :note_noon_snack, "残食", {value: :remaining} %>
+              <%# 残食ボタンをクリックすると、スライドダウン %>
+          </div>
+        </div>
+        <div id="noon_snack_hidden">
+          <%= form.label :note_noon_snack_remaining_contents, "残食量と内容" %>
+          <%= form.text_area :note_noon_snack_remaining_contents %>
         </div>
       </div>
-      <%# 残食ボタンをクリックすると、スライドダウン %>
-      <div id="morning_hidden">
-        <%= form.label :remaining_contents, "残食量と内容" %>
-        <%= form.text_area :remaining_contents %>
-      </div>
-      <div id="noons">
-        <p class="meal_p">昼食</p>
-        <div class="twe_button" id="noon">
-            <%= form.radio_button :noon, :complete %>
-            <%= form.label :noon, "完食", {value: :complete} %>
-            <%= form.radio_button :noon, :remaining %>
-            <%= form.label :noon, "残食", {value: :complete} %>
-            <%# 残食ボタンをクリックすると、スライドダウン %>
-            <div id="noon_hidden">
-              <%= form.label :remaining_contents, "残食量と内容" %>
-              <%= form.text_area :remaining_contents %>
-            </div>
-        </div>
-      </div>
-      <div id="noon_snacks">
-        <p class="meal_p">午後おやつ</p>
-        <div class="twe_button" id="noon_snack">
-            <%= form.radio_button :noon_snack, :complete %>
-            <%= form.label :noon_snack, "完食", {value: :complete} %>
-            <%= form.radio_button :noon_snack, :remaining %>
-            <%= form.label :noon_snack, "残食", {value: :remaining} %>
-            <%# 残食ボタンをクリックすると、スライドダウン %>
-            <div id="noon_snack_hidden">
-              <%= form.label :remaining_contents, "残食量と内容" %>
-              <%= form.text_area :remaining_contents %>
-            </div>
-        </div>
-      </div>
-
     </div>
-  </div>
 
-  <h3 class="parent_title_h3">保育園での様子</h3>
-  <div id="today_states">
-    <%= form.label :states, "本日のエピソードや様子を記入ください" %>
-    <%= form.text_area :states %>
-  </div>
-  <h3 class="parent_title_h3">連絡事項</h3>
-  <div class="field">
-    <%= form.label :information, "連絡事項ある場合、記入ください" %>
-    <%= form.text_area :information %>
-  </div>
+    <h3 class="daily_title_h3">保育園での様子</h3>
+    <div id="today_states">
+      <%= form.label :states, "本日のエピソードや様子を記入ください" %>
+      <%= form.text_area :states %>
+    </div>
+    <h3 class="daily_title_h3">連絡事項</h3>
+    <div class="field">
+      <%= form.label :information, "連絡事項ある場合、記入ください" %>
+      <%= form.text_area :information %>
+    </div>
 
-  <div class="actions">
-    <%= form.submit value="記録を保存", id: :daily_record_input %>
+    <div class="actions">
+      <%= form.submit value="記録を保存", id: :daily_record_input %>
+    </div>
   </div>
 <% end %>
