--- a/app/views/daily_records/index.html.erb
+++ b/app/views/daily_records/index.html.erb
@@ -1,31 +1,27 @@
-<p id="notice"><%= notice %></p>
+<div id="daily_record_index_body">
+  <div class="parent_links">
+    <%= link_to "保護者システム", new_daily_record_path ,id: :parent_tops_system %>
+  </div>
+  <h1>連絡ノート一覧</h1>
+  <div id="daily_record_index">
+    <div class="notes_choice">
+      <table>
+        <thead>
+          <tr>
+            <th>日付</th>
+            <th>内容</th>
+          </tr>
+        </thead>
 
-<h1>Daily Records</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Activities</th>
-      <th>States</th>
-      <th>Information</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @daily_records.each do |daily_record| %>
-      <tr>
-        <td><%= daily_record.activities %></td>
-        <td><%= daily_record.states %></td>
-        <td><%= daily_record.information %></td>
-        <td><%= link_to 'Show', daily_record %></td>
-        <td><%= link_to 'Edit', edit_daily_record_path(daily_record) %></td>
-        <td><%= link_to 'Destroy', daily_record, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Daily Record', new_daily_record_path %>
+        <tbody>
+          <% @daily_records.each do |daily_record| %>
+            <tr>
+              <td><%= daily_record.created_at.strftime("%Y年%m月%d日") %></td>
+              <td><%= link_to '詳細', daily_record %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
