--- a/app/views/parent_forms/new.html.erb
+++ b/app/views/parent_forms/new.html.erb
@@ -1,6 +1,6 @@
-<h1>お問い合わせ</h1>
+<div id="parent_form_new_body">
+  <h1>お問い合わせ</h1>
 
-<%= render 'form', parent_form: @parent_form %>
+  <%= render 'form', parent_form: @parent_form %>
 
-<%= link_to 'トップへ戻る', parent_tops_path %>
-
+</div>
