--- a/app/views/parent_informations/index.html.erb
+++ b/app/views/parent_informations/index.html.erb
@@ -1,25 +1,25 @@
-<p id="notice"><%= notice %></p>
+<div id="parent_information_index_body">
+  <h1>お知らせ・お願い</h1>
 
-<h1>お知らせ・お願い</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>投稿日</th>
-      <th>タイトル</th>
-      <th>内容</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @parent_informations.each do |parent_information| %>
+  <table>
+    <thead>
       <tr>
-        <td><%= parent_information.date %></td>
-        <td><%= parent_information.title %></td>
-        <td><%= link_to '確認する', parent_information %></td>
+        <th>投稿日</th>
+        <th>タイトル</th>
+        <th>内容</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+
+    <tbody>
+      <% @parent_informations.each do |parent_information| %>
+        <tr>
+          <td><%= parent_information.date.strftime("%Y年%m月%d日") %></td>
+          <td><%= parent_information.title %></td>
+          <td><%= link_to '詳細', parent_information %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 
 
