--- a/app/views/stampings/new.html.erb
+++ b/app/views/stampings/new.html.erb
@@ -1,7 +1,8 @@
 
+<div id="stamping_new_body">
+  <h1>登園・降園打刻システム</h1>
+  <p>登園または降園ボタンどちらかを選択してください</p>
 
-<h1>登園・降園打刻システム</h1>
-<p>登園または降園ボタンどちらかを選択してください</p>
+  <%= render 'form', stamping: @stamping %>
 
-<%= render 'form', stamping: @stamping %>
-
+</div>
